Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36956

Random crash when putting app in the background

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0 RC1
    • 5.2.1
    • QPA
    • Qt 5.2.1, ios7, ipad mini
    • iOS/tvOS/watchOS

    Description

      I have a Qt Quick app and it randomly crashes when putting the app in the background. Here is the crash log.

      Thread 9 QSGRenderThread, Queue : (null)
      #0	0x33e3a8f6 in gpus_ReturnNotPermittedKillClient ()
      #1	0x33e3b390 in gpusSubmitDataBuffers ()
      #2	0x2e34482c in SubmitPackets ()
      #3	0x317a6c3c in gliPresentViewES ()
      #4	0x317b1138 in -[EAGLContext presentRenderbuffer:] ()
      #5	0x00534aba in QIOSContext::swapBuffers(QPlatformSurface*) at /Users/lasconic/qt5/qtbase/src/plugins/platforms/ios/qioscontext.mm:121
      #6	0x00534adc in _ZThn8_N11QIOSContext11swapBuffersEP16QPlatformSurface at /Users/lasconic/qt5/qtbase/src/plugins/platforms/ios/qioscontext.mm:122
      #7	0x00f4f044 in QOpenGLContext::swapBuffers(QSurface*) at /Users/lasconic/qt5/qtbase/src/gui/kernel/qopenglcontext.cpp:861
      #8	0x008b58d6 in QSGRenderThread::syncAndRender() at /Users/lasconic/qt5/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:595
      #9	0x008b5c92 in QSGRenderThread::run() at /Users/lasconic/qt5/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:666
      #10	0x0119fc76 in QThreadPrivate::start(void*) at /Users/lasconic/qt5/qtbase/src/corelib/thread/qthread_unix.cpp:345
      #11	0x3a36ec1c in _pthread_body ()
      #12	0x3a36eb8e in _pthread_start ()
      

      According to http://stackoverflow.com/questions/14468888/gpus-returnnotpermittedkillclient-error-thrown-with-mkmapview-when-app-is-backgr gpus_ReturnNotPermittedKillClient gets thrown when OpenGL actions are triggered while an app is backgrounded. I don't think I'm doing any OpenGL actions myself, the app features a ListView loading images from the web and a busy indicator. I tried to reproduce in a minimal case without success so far... Any guidance appreciated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            lasconic Lasconic
            Votes:
            5 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes